--- a/serverless.yml
+++ b/serverless.yml
@@ -6,7 +6,7 @@ provider:
   runtime: python3.13
   region: us-east-1
   memorySize: 256
-  timeout: 30
+  timeout: 25  # menos que 30s para HTTP API
   environment:
     CUSTOMERS_TABLE: CustomersTable
     ORDERS_TABLE: OrdersTable
@@ -33,31 +33,34 @@ provider:
         - Effect: Allow
           Action:
             - states:StartExecution
-          Resource:
-            - "*"  # StartExecution será restringido por recurso si lo deseas
+          Resource: "*"
 
 functions:
   # ---------- Cliente MS existing endpoints ----------
   createOrder:
     handler: handler.create_order
+    timeout: 25
     events:
       - httpApi:
           path: /orders
           method: post
   getOrdersByCustomer:
     handler: handler.get_orders_by_customer
+    timeout: 25
     events:
       - httpApi:
           path: /orders/{customerId}
           method: get
   createCustomer:
     handler: handler.create_customer
+    timeout: 25
     events:
       - httpApi:
           path: /customers
           method: post
   getCustomer:
     handler: handler.get_customer
+    timeout: 25
     events:
       - httpApi:
           path: /customers/{customerId}
@@ -143,7 +146,8 @@ resources:
           Statement:
             - Effect: Allow
               Principal:
-                Service: events.amazonaws.com
+                Service:
+                  - events.amazonaws.com
               Action: sts:AssumeRole
         Path: /
         Policies:
@@ -154,48 +158,7 @@ resources:
                 - Effect: Allow
                   Action:
                     - states:StartExecution
-                  Resource: "*"  # puedes restringir a la máquina de estados concreta
-
-    # State Machine (Step Functions) - invoca las 3 Lambdas definidas arriba secuencialmente
-    PardosOrderStateMachine:
-      Type: AWS::StepFunctions::StateMachine
-      Properties:
-        StateMachineName: PardosOrderStateMachine
-        RoleArn: !GetAtt StepFunctionExecutionRole.Arn
-        DefinitionString:
-          Fn::Sub: |
-            {
-              "Comment": "StateMachine for Pardos order workflow",
-              "StartAt": "Cooking",
-              "States": {
-                "Cooking": {
-                  "Type": "Task",
-                  "Resource": "${TaskCookingArn}",
-                  "InputPath": "$",
-                  "ResultPath": "$.cookingResult",
-                  "Next": "Packaging"
-                },
-                "Packaging": {
-                  "Type": "Task",
-                  "Resource": "${TaskPackagingArn}",
-                  "InputPath": "$",
-                  "ResultPath": "$.packagingResult",
-                  "Next": "Delivery"
-                },
-                "Delivery": {
-                  "Type": "Task",
-                  "Resource": "${TaskDeliveryArn}",
-                  "InputPath": "$",
-                  "ResultPath": "$.deliveryResult",
-                  "End": true
-                }
-              }
-            }
-        # Reemplaza dinámicamente con ARNs de Lambda
-        DefinitionSubstitutions:
-          TaskCookingArn: !GetAtt TaskCookingLambda.Arn
-          TaskPackagingArn: !GetAtt TaskPackagingLambda.Arn
-          TaskDeliveryArn: !GetAtt TaskDeliveryLambda.Arn
+                  Resource: "*"
 
     # Rol que usa Step Functions para ejecutar las Lambdas
     StepFunctionExecutionRole:
@@ -236,6 +199,46 @@ resources:
                     - events:PutEvents
                   Resource: "*"
 
+    # State Machine (Step Functions)
+    PardosOrderStateMachine:
+      Type: AWS::StepFunctions::StateMachine
+      Properties:
+        StateMachineName: PardosOrderStateMachine
+        RoleArn: !GetAtt StepFunctionExecutionRole.Arn
+        DefinitionString:
+          Fn::Sub: |
+            {
+              "Comment": "StateMachine for Pardos order workflow",
+              "StartAt": "Cooking",
+              "States": {
+                "Cooking": {
+                  "Type": "Task",
+                  "Resource": "${TaskCookingLambdaArn}",
+                  "InputPath": "$",
+                  "ResultPath": "$.cookingResult",
+                  "Next": "Packaging"
+                },
+                "Packaging": {
+                  "Type": "Task",
+                  "Resource": "${TaskPackagingLambdaArn}",
+                  "InputPath": "$",
+                  "ResultPath": "$.packagingResult",
+                  "Next": "Delivery"
+                },
+                "Delivery": {
+                  "Type": "Task",
+                  "Resource": "${TaskDeliveryLambdaArn}",
+                  "InputPath": "$",
+                  "ResultPath": "$.deliveryResult",
+                  "End": true
+                }
+              }
+            }
+        DefinitionSubstitutions:
+          TaskCookingLambdaArn: !GetAtt TaskCooking.Arn
+          TaskPackagingLambdaArn: !GetAtt TaskPackaging.Arn
+          TaskDeliveryLambdaArn: !GetAtt TaskDelivery.Arn
+
     # EventBridge Rule: cuando haya un OrderCreated -> start Step Function
     OrderCreatedRule:
       Type: AWS::Events::Rule
@@ -257,14 +260,9 @@ resources:
                 detail: $.detail
               InputTemplate: '{"orderId": <orderId>, "input": <detail>}'
 
-
   Outputs:
     EventBusName:
       Value: !Ref PardosEventBus
       Export:
         Name: PardosEventBusName
 
-# NOTE: Serverless framework creates lambdas with logical names; algunas referencias
-# a los ARNs en la state machine usan GetAtt a recursos lógicos que Serverless crea.
-# Si encuentras errores CloudFormation en esos GetAtt, revisa los nombres lógicos generados
-# (TaskCookingLambda, TaskPackagingLambda, TaskDeliveryLambda) o usa el plugin stepfunctions.
