--- a/serverless.yml
+++ b/serverless.yml
@@ -1,93 +1,64 @@
-org: amirykehara
 service: cliente-ms
+frameworkVersion: '3'
 
 provider:
   name: aws
-  runtime: python3.13
+  runtime: python3.11
   region: us-east-1
-  memorySize: 256
-  timeout: 30
+  stage: ${opt:stage, 'dev'}
+  lambdaHashingVersion: 20201221
   environment:
-    CUSTOMERS_TABLE: CustomersTable
-    ORDERS_TABLE: OrdersTable
-    STEPS_TABLE: StepsTable
-    EVENT_BUS_NAME: pf-pardos-bus
-  iam:
-    role:
-      statements:
-        - Effect: Allow
-          Action:
-            - dynamodb:PutItem
-            - dynamodb:UpdateItem
-            - dynamodb:GetItem
-            - dynamodb:Query
-            - dynamodb:Scan
-          Resource:
-            - arn:aws:dynamodb:#{AWS::Region}:#{AWS::AccountId}:table/CustomersTable
-            - arn:aws:dynamodb:#{AWS::Region}:#{AWS::AccountId}:table/OrdersTable
-            - arn:aws:dynamodb:#{AWS::Region}:#{AWS::AccountId}:table/StepsTable
-        - Effect: Allow
-          Action:
-            - events:PutEvents
-          Resource: "*"
-        - Effect: Allow
-          Action:
-            - states:StartExecution
-          Resource: "*"
+    DYNAMODB_TABLE_CUSTOMER: ${self:service}-customer-${self:provider.stage}
+    DYNAMODB_TABLE_ORDER: ${self:service}-order-${self:provider.stage}
 
 functions:
-  # ---------- Cliente MS existing endpoints ----------
-  createOrder:
-    handler: handler.create_order
-    events:
-      - httpApi:
-          path: /orders
-          method: post
-  getOrdersByCustomer:
-    handler: handler.get_orders_by_customer
-    events:
-      - httpApi:
-          path: /orders/{customerId}
-          method: get
   createCustomer:
     handler: handler.create_customer
+    timeout: 30
     events:
       - httpApi:
-          path: /customers
+          path: /customer
           method: post
+
   getCustomer:
     handler: handler.get_customer
+    timeout: 30
     events:
       - httpApi:
-          path: /customers/{customerId}
+          path: /customer/{id}
           method: get
+
+  createOrder:
+    handler: handler.create_order
+    timeout: 30
+    events:
+      - httpApi:
+          path: /order
+          method: post
+
+  getOrdersByCustomer:
+    handler: handler.get_orders_by_customer
+    timeout: 30
+    events:
+      - httpApi:
+          path: /order/customer/{id}
+          method: get
+
+  # Lambdas usadas en Step Function
+  taskCooking:
+    handler: handler.task_cooking
+  taskPackaging:
+    handler: handler.task_packaging
+  taskDelivery:
+    handler: handler.task_delivery
 
 resources:
   Resources:
 
-    # EventBus (custom)
-    PardosEventBus:
-      Type: AWS::Events::EventBus
-      Properties:
-        Name: pf-pardos-bus
-
-    # DynamoDB Tables
-    CustomersTable:
+    CustomerTable:
       Type: AWS::DynamoDB::Table
       Properties:
-        TableName: CustomersTable
-        AttributeDefinitions:
-          - AttributeName: PK
-            AttributeType: S
-        KeySchema:
-          - AttributeName: PK
-            KeyType: HASH
-        BillingMode: PAY_PER_REQUEST
-
-    OrdersTable:
-      Type: AWS::DynamoDB::Table
-      Properties:
-        TableName: OrdersTable
+        TableName: ${self:provider.environment.DYNAMODB_TABLE_CUSTOMER}
         AttributeDefinitions:
           - AttributeName: PK
             AttributeType: S
@@ -100,10 +71,10 @@ resources:
             KeyType: RANGE
         BillingMode: PAY_PER_REQUEST
 
-    StepsTable:
+    OrderTable:
       Type: AWS::DynamoDB::Table
       Properties:
-        TableName: StepsTable
+        TableName: ${self:provider.environment.DYNAMODB_TABLE_ORDER}
         AttributeDefinitions:
           - AttributeName: PK
             AttributeType: S
@@ -115,165 +86,71 @@ resources:
           - AttributeName: SK
             KeyType: RANGE
         BillingMode: PAY_PER_REQUEST
-
-    # Roles
-    EventBridgeStepRole:
-      Type: AWS::IAM::Role
-      Properties:
-        RoleName: pf-pardos-eventbridge-step-role
-        AssumeRolePolicyDocument:
-          Version: '2012-10-17'
-          Statement:
-            - Effect: Allow
-              Principal:
-                Service:
-                  - events.amazonaws.com
-              Action: sts:AssumeRole
-        Path: /
-        Policies:
-          - PolicyName: AllowStartExecution
-            PolicyDocument:
-              Version: '2012-10-17'
-              Statement:
-                - Effect: Allow
-                  Action:
-                    - states:StartExecution
-                  Resource: "*"
 
     StepFunctionExecutionRole:
       Type: AWS::IAM::Role
       Properties:
-        RoleName: pf-pardos-step-role
+        RoleName: ${self:service}-stepfn-role-${self:provider.stage}
         AssumeRolePolicyDocument:
           Version: '2012-10-17'
           Statement:
             - Effect: Allow
               Principal:
                 Service:
-                  - states.amazonaws.com
-              Action: sts:AssumeRole
-        Path: /
+                  - states.${self:provider.region}.amazonaws.com
+              Action:
+                - sts:AssumeRole
         Policies:
-          - PolicyName: StepFunctionInvokeLambdaAndDDB
+          - PolicyName: StepFunctionPolicy
             PolicyDocument:
               Version: '2012-10-17'
               Statement:
                 - Effect: Allow
                   Action:
                     - lambda:InvokeFunction
-                    - lambda:InvokeAsync
-                  Resource: "*"
-                - Effect: Allow
-                  Action:
-                    - dynamodb:PutItem
-                    - dynamodb:UpdateItem
-                    - dynamodb:GetItem
-                    - dynamodb:Query
-                    - dynamodb:Scan
-                  Resource:
-                    - arn:aws:dynamodb:#{AWS::Region}:#{AWS::AccountId}:table/OrdersTable
-                    - arn:aws:dynamodb:#{AWS::Region}:#{AWS::AccountId}:table/StepsTable
-                - Effect: Allow
-                  Action:
-                    - events:PutEvents
                   Resource: "*"
 
-    # Step Function Lambdas como recursos explícitos
-    TaskCookingLambda:
-      Type: AWS::Lambda::Function
-      Properties:
-        FunctionName: taskCooking
-        Handler: orchestrator_handlers.task_cooking
-        Runtime: python3.13
-        MemorySize: 256
-        Timeout: 30
-        Role: !GetAtt StepFunctionExecutionRole.Arn
-
-    TaskPackagingLambda:
-      Type: AWS::Lambda::Function
-      Properties:
-        FunctionName: taskPackaging
-        Handler: orchestrator_handlers.task_packaging
-        Runtime: python3.13
-        MemorySize: 256
-        Timeout: 30
-        Role: !GetAtt StepFunctionExecutionRole.Arn
-
-    TaskDeliveryLambda:
-      Type: AWS::Lambda::Function
-      Properties:
-        FunctionName: taskDelivery
-        Handler: orchestrator_handlers.task_delivery
-        Runtime: python3.13
-        MemorySize: 256
-        Timeout: 30
-        Role: !GetAtt StepFunctionExecutionRole.Arn
-
-    # State Machine
     PardosOrderStateMachine:
       Type: AWS::StepFunctions::StateMachine
       Properties:
-        StateMachineName: PardosOrderStateMachine
+        StateMachineName: PardosOrderStateMachine-${self:provider.stage}
         RoleArn: !GetAtt StepFunctionExecutionRole.Arn
-        DefinitionString:
-          Fn::Sub: |
-            {
-              "Comment": "StateMachine for Pardos order workflow",
-              "StartAt": "Cooking",
-              "States": {
-                "Cooking": {
-                  "Type": "Task",
-                  "Resource": "${TaskCookingArn}",
-                  "InputPath": "$",
-                  "ResultPath": "$.cookingResult",
-                  "Next": "Packaging"
-                },
-                "Packaging": {
-                  "Type": "Task",
-                  "Resource": "${TaskPackagingArn}",
-                  "InputPath": "$",
-                  "ResultPath": "$.packagingResult",
-                  "Next": "Delivery"
-                },
-                "Delivery": {
-                  "Type": "Task",
-                  "Resource": "${TaskDeliveryArn}",
-                  "InputPath": "$",
-                  "ResultPath": "$.deliveryResult",
-                  "End": true
-                }
+        DefinitionString: !Sub |
+          {
+            "Comment": "StateMachine for Pardos order workflow",
+            "StartAt": "Cooking",
+            "States": {
+              "Cooking": {
+                "Type": "Task",
+                "Resource": "${TaskCookingLambdaArn}",
+                "InputPath": "$",
+                "ResultPath": "$.cookingResult",
+                "Next": "Packaging"
+              },
+              "Packaging": {
+                "Type": "Task",
+                "Resource": "${TaskPackagingLambdaArn}",
+                "InputPath": "$",
+                "ResultPath": "$.packagingResult",
+                "Next": "Delivery"
+              },
+              "Delivery": {
+                "Type": "Task",
+                "Resource": "${TaskDeliveryLambdaArn}",
+                "InputPath": "$",
+                "ResultPath": "$.deliveryResult",
+                "End": true
               }
             }
+          }
         DefinitionSubstitutions:
-          TaskCookingArn: !GetAtt TaskCookingLambda.Arn
-          TaskPackagingArn: !GetAtt TaskPackagingLambda.Arn
-          TaskDeliveryArn: !GetAtt TaskDeliveryLambda.Arn
+          TaskCookingLambdaArn: !GetAtt taskCooking.Arn
+          TaskPackagingLambdaArn: !GetAtt taskPackaging.Arn
+          TaskDeliveryLambdaArn: !GetAtt taskDelivery.Arn
 
-    # EventBridge Rule
-    OrderCreatedRule:
-      Type: AWS::Events::Rule
-      Properties:
-        Name: PardosOrderCreatedRule
-        EventBusName: !Ref PardosEventBus
-        EventPattern:
-          source:
-            - "pf.pardosserverless"
-          detail-type:
-            - "OrderCreated"
-        Targets:
-          - Id: StartPardosStateMachine
-            Arn: !Ref PardosOrderStateMachine
-            RoleArn: !GetAtt EventBridgeStepRole.Arn
-            InputTransformer:
-              InputPathsMap:
-                orderId: $.detail.orderId
-                detail: $.detail
-              InputTemplate: '{"orderId": <orderId>, "input": <detail>}'
+plugins:
+  - serverless-python-requirements
 
-  Outputs:
-    EventBusName:
-      Value: !Ref PardosEventBus
-      Export:
-        Name: PardosEventBusName
-
-
+custom:
+  pythonRequirements:
+    dockerizePip: true
